Fixed banner z-index

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -21,7 +21,7 @@
     padding: 5px 20px;
     border-radius: 0px 20px 0px 5px;
     background-color: $color-primary-light;
-    z-index: 500;
+    z-index: 9;
   }
 
   &__image {
